--- a/css/main.css
+++ b/css/main.css
@@ -125,6 +125,15 @@ button {
   color: var(--white-color);
 }
 
+.hero button:hover {
+  background-color: rgba(242, 188, 176, 0.6);
+}
+
+.hero button:active {
+  background-color: var(--orange-bg-colora);
+  color: var(--white-color);
+}
+
 h3 {
   color: var(--black-light);
   font-size: 16px;
