--- a/css/contact.css
+++ b/css/contact.css
@@ -83,6 +83,7 @@ li.header {
 
 button {
   cursor: pointer;
+  border-radius: 8px;
 }
 
 .header a {
@@ -145,9 +146,9 @@ input:hover {
   color: var(--white-color);
 }
 
-input#fname {
+/* input#fname {
   color: var(--white-color);
-}
+} */
 
 input:active {
   background-color: var(--orange-bg-color);
@@ -156,6 +157,15 @@ input:active {
   border-top: none;
   border-left: none;
   border-right: none;
+}
+
+input:focus {
+  outline: none;
+  background-color: #e7816b;
+}
+
+#fname:focus {
+  background-color: #e7816b;
 }
 
 .submit {
@@ -217,4 +227,57 @@ input#text.massage {
   display: flex;
   column-gap: 30px;
   margin-bottom: 160px;
+}
+
+/* * */
+
+footer {
+  background-color: var(--footer-bg-color);
+  height: 100%;
+  max-height: 493px;
+  width: 100%;
+  padding-top: 70px;
+  position: static;
+  top: 100px;
+}
+
+.footer a {
+  color: var(--white-color);
+}
+
+hr {
+  position: relative;
+  top: -35px;
+  border: 1px solid rgba(255, 255, 255, 10%);
+}
+
+location-box {
+  position: relative;
+  left: 300px;
+  top: -80px;
+}
+
+.box-for-map p {
+  font-size: 16px;
+  line-height: 26px;
+  max-width: 190px;
+  width: 100%;
+}
+
+.location-box {
+  position: relative;
+  left: 300px;
+  top: -80px;
+}
+
+address {
+  font-style: normal;
+}
+
+.box-for-icons {
+  position: relative;
+  display: flex;
+  gap: 15px;
+  left: 930px;
+  top: -100px;
 }
